2003-03-10  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3010915 -- mouse wheel won't scroll the main document when you are over [i]frame

        * WebView.subproj/WebDynamicScrollBarsView.h: Made WebDynamicScrollBarsView a subclass of
        WebCoreScrollView instead of NSScrollView.
        
        - other changes
        
        * WebView.subproj/WebFramePrivate.m: (-[WebFrame _actionInformationForNavigationType:event:originalURL:):
        Fix problem where you would not get any information if the click was on a subview of the
        WebHTMLView, like a form control.

2003-03-10  Chris Blumenberg  <cblu@apple.com>

	Fixed some download-related leaks. Primarily, we were leaking the data source that started the download. The data source is now immediately released when it becomes a download.

        Reviewed by darin.

        * Downloads.subproj/WebDownload.m:
        (-[WebDownloadPrivate dealloc]): release the WebResourceDelegateProxy
        (-[WebDownload _initWithLoadingResource:request:response:delegate:proxy:]): renamed, don't pass a datasource so WebDownload is completely disconnected from the that. Pass the proxy so it transfers ownership from WebMainResourceClient and it doesn't leak when we cancel a download.
        (-[WebDownload _setRequest:]): added
        (-[WebDownload _setResponse:]): added
        (-[WebDownload resource:willSendRequest:]): call _setRequest
        (-[WebDownload resource:didReceiveResponse:]): call _setResponse
        * Downloads.subproj/WebDownloadPrivate.h:
        * WebView.subproj/WebBaseResourceHandleDelegate.h:
        * WebView.subproj/WebBaseResourceHandleDelegate.m: removed notifyDelegatesOfInterruptionByPolicyChange, no longer called
        * WebView.subproj/WebMainResourceClient.h: made WebResourceDelegateProxy available to other classes
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient receivedError:]): moved most error handling code here